<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PocketCommunity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- URL -->
    <string name="url_login">http://192.168.191.1:8080/Property/servlet/login</string>
    <string name="url_signup">http://192.168.191.1:8080/Property/servlet/signup</string>
    <string name="url_notice">http://192.168.191.1:8080/Property/servlet/notice</string>
    <string name="url_activity">http://192.168.191.1:8080/Property/servlet/activity</string>
    <string name="url_addactivity">http://192.168.191.1:8080/Property/servlet/addactivity</string>
    
    <string name="url_marketlist">http://192.168.191.1:8080/Property/servlet/marketlist</string>
    <string name="url_push">http://192.168.191.1:8080/Property/servlet/push</string>
    
    <!-- Login -->
    <string name="login_btnlogin">登 录</string>
    <string name="login_hint_username">用户名</string>
    <string name="login_hint_password">密码</string>
	<string name="login_cant_login">无法登陆?</string>
	<string name="login_new_account">新用户</string>
	<!-- Register -->
	<string name="register_title">注册</string>
	<string name="register_next_step">下一步</string>
	<string name="register_name">姓名</string>
	<string name="register_tel">电话</string>
	<string name="register_address">住址</string>
	<string name="register_finish">完成</string>
	<string name="register_username">用户名</string>
	<string name="register_password">密码</string>
	<string name="register_confirm_password">确认密码</string>
	<string name="register_warn">·以上信息将会用于管理员审核，以及找回密码</string>
	<!-- Main -->
	<string name="main_test_title">标题</string>
	<string name="main_notice_title">公告</string>
	<string name="main_property_title">物业</string>
	<string name="main_shop_title">商铺</string>
	<string name="main_activity_title">活动</string>
	<string name="main_setting_title">设置</string>
	<!-- Notice -->
	<string name="notice_test_hint">欢迎来到口袋社区</string>
	<string name="notice_test_title">这是一条公告</string>
	<string name="notice_test_date">12-26</string>
	<!-- Property -->
	<string name="property_title_msg">消息</string>
	<string name="property_title_expense">缴费</string>
	<string name="property_expense_user">用户名</string>
	<string name="property_expense_address">缴费地址</string>
	<string name="property_expense_balance">余额</string>
	<string name="property_expense_unpaid">待缴费</string>
	<string name="property_expense_deposit">预留费</string>
	<string name="property_expense_history">缴费历史</string>
	<string name="property_title_repair">报修</string>
	<string name="property_repair_hint">请描述您的问题..</string>
	<string name="property_repair_cancel">取消</string>
	<string name="property_repair_submit">提交</string>
	<string name="property_title_advice">意见</string>
	<string name="property_advice_hint">请描述您的意见或建议..</string>
	<!-- Shop -->
	<string name="shop_test_supermarket">万嘉超市</string>
	<string name="shop_record">购买记录</string>
	<string name="shop_myshop">我的店铺</string>
	<string name="myshop_order">订单</string>
	<string name="myshop_good">商品</string>
	<string name="myshop_add">添加</string>
	<string name="myshop_reset">重置</string>
	<string name="myshop_finish">完成</string>
	<string name="myshop_good_name">名称</string>
	<string name="myshop_price">单价</string>
	<!-- Activity -->
	<string name="activity_top">置顶</string>
	<string name="activity_test_title">【注意】活动版块需知</string>
	<string name="activity_test_content">1、自觉遵守法律法规\n2、禁止发送与活动无关的帖子</string>
	<string name="activity_test_the_person">管理员 12-26</string>
	<string name="activity_test_review">回复 56</string>
	<string name="activity_post">发布</string>
	<string name="activity_post_title">标题</string>
	<string name="activity_post_content">写些东西吧..</string>
	<string name="activity_post_cancel">取消</string>
	<string name="activity_post_submit">发表</string>
	<string name="activity_detail_host">楼主</string>
	<!-- Setting -->
	<string name="setting_username">用户名</string>
	<string name="setting_modifypassword">修改密码</string>
	<string name="setting_tel">联系电话</string>
	<string name="setting_address">住址</string>
	<string name="setting_myexpense">我的缴费</string>
	<string name="setting_myrepair">我的报修</string>
	<string name="setting_myadvice">我的反馈</string>
	<string name="setting_myshoprecord">购买记录</string>
	<string name="setting_help">帮助</string>
	<string name="setting_update">检查更新</string>
	<string name="setting_logoff">注销</string>
</resources>
