<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginTop="@dimen/activity_margin_top"
	    android:layout_marginLeft="@dimen/activity_margin_left"
	    android:layout_marginRight="@dimen/activity_margin_right"
	    android:background="@drawable/activity_list_item_bg">
	    <!-- Title -->
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="@dimen/activity_padding"
	        android:orientation="horizontal"
	        android:gravity="center">
	        <TextView
	            android:id="@+id/activity_top"
	            android:visibility="gone"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:padding="@dimen/activity_padding"
	            android:text="@string/activity_top"
	            android:textColor="@color/red_500"
				android:textSize="@dimen/activity_top_size"
				android:background="@drawable/activity_title_bg"/>
	        <TextView
	            android:id="@+id/activity_title"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="6"
	            android:gravity="left"
	            android:ellipsize="end"
	            android:text="@string/activity_test_title"
	            android:textColor="@color/black"
	            android:textSize="@dimen/activity_text_size"/>
	    </LinearLayout>
	    <!-- Content -->
	    <TextView
	        android:id="@+id/activity_content"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="@dimen/activity_padding"
	        android:text="@string/activity_test_content"
	        android:textColor="@color/grey_500"
	        android:textSize="@dimen/activity_content_text_size"
	        android:ellipsize="end"/>
	    <!-- Bottom -->
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="@dimen/activity_padding"
	        android:orientation="horizontal"
	        android:gravity="center">
	        <TextView
	            android:id="@+id/activity_the_person"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="5"
	            android:gravity="center_vertical"
	            android:text="@string/activity_test_the_person"
	            android:textColor="@color/grey_700"
	            android:textSize="@dimen/activity_the_person_size"/>
	        <TextView
	            android:id="@+id/activity_review"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="4"
	            android:gravity="right"
	            android:text="@string/activity_test_review"
	            android:textColor="@color/blue_500"
	            android:textSize="@dimen/activity_review_size"/>
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>