<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@color/blue"
        android:orientation="horizontal">
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1">
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="4"
	        android:gravity="center">
			<TextView
			    android:id="@+id/main_text_title"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/main_setting_title"
			    android:textSize="@dimen/bar_title_text"
			    android:textColor="@color/white"/>	        
	    </LinearLayout>
		<LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center">
	    </LinearLayout>      
    </LinearLayout>	
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="15.5"
	    android:background="@color/grey">
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center_horizontal"
	        android:background="@color/trans"
	        android:layout_marginTop="@dimen/setting_margin_top">
	        <!-- Photo -->
	        <ImageButton
	            android:id="@+id/setting_photo"
	            android:layout_width="wrap_content"
	            android:layout_height="@dimen/setting_photo_height"
	            android:src="@drawable/photo"
	            android:scaleType="fitCenter"
	            android:background="@color/trans"/>
	        <!-- Personal Information -->
	        <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/trans"
		        android:layout_marginTop="@dimen/setting_margin_top"
		        android:orientation="vertical">
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:background="@drawable/setting_item_bg">
					<TextView
					    android:layout_width="0dp"
					    android:layout_height="wrap_content"
					    android:layout_weight="20"
					    android:gravity="center"
					    android:padding="@dimen/setting_text_padding"
					    android:text="@string/setting_username"
					    android:textColor="@color/black"
					    android:textSize="@dimen/setting_text_size"/>
					<TextView
					    android:id="@+id/setting_text_username"
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="40"
					    android:textColor="@color/black"
					    android:textSize="@dimen/setting_text_size"
					    android:background="@color/trans"/>    
		        </LinearLayout>
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:background="@drawable/setting_item_bg">
					<TextView
					    android:layout_width="0dp"
					    android:layout_height="wrap_content"
					    android:layout_weight="20"
					    android:gravity="center"
					    android:padding="@dimen/setting_text_padding"
					    android:text="@string/setting_modifypassword"
					    android:textColor="@color/black"
					    android:textSize="@dimen/setting_text_size"/>
					<ImageButton
					    android:id="@+id/setting_btn_modify"
					    android:src="@drawable/detail_icon"
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="40"
					    android:scaleType="fitEnd"
					    android:background="@color/trans"/>
		        </LinearLayout>
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:background="@drawable/setting_item_bg">
					<TextView
					    android:layout_width="0dp"
					    android:layout_height="wrap_content"
					    android:layout_weight="20"
					    android:gravity="center"
					    android:padding="@dimen/setting_text_padding"
					    android:text="@string/setting_tel"
					    android:textColor="@color/black"
					    android:textSize="@dimen/setting_text_size"/>
					<Button 
					    android:id="@+id/setting_btn_tel"
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="35"
					    android:ellipsize="end"
					    android:textColor="@color/black"
					    android:textSize="@dimen/setting_text_size"
					    android:background="@color/trans"/>
					<ImageButton 
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="5"
					    android:background="@color/trans"
					    android:src="@drawable/detail_icon"
					    android:scaleType="fitEnd"/>
		        </LinearLayout>
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:background="@drawable/setting_item_bg">
					<TextView
					    android:layout_width="0dp"
					    android:layout_height="wrap_content"
					    android:layout_weight="20"
					    android:gravity="center"
					    android:padding="@dimen/setting_text_padding"
					    android:text="@string/setting_address"
					    android:textColor="@color/black"
					    android:textSize="@dimen/setting_text_size"/>
					<Button 
					    android:id="@+id/setting_btn_address"
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="35"
					    android:ellipsize="end"
					    android:textColor="@color/black"
					    android:textSize="@dimen/setting_text_size"
					    android:background="@color/trans"/>
					<ImageButton 
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="5"
					    android:background="@color/trans"
					    android:src="@drawable/detail_icon"
					    android:scaleType="fitEnd"/>
		        </LinearLayout>	        
		    </LinearLayout>
		    <!-- About Community -->
	        <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/trans"
		        android:layout_marginTop="@dimen/setting_margin_top"
		        android:orientation="vertical">
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:background="@drawable/setting_item_bg">
					<TextView
					    android:layout_width="0dp"
					    android:layout_height="wrap_content"
					    android:layout_weight="20"
					    android:gravity="center"
					    android:padding="@dimen/setting_text_padding"
					    android:text="@string/setting_myexpense"
					    android:textColor="@color/black"
					    android:textSize="@dimen/setting_text_size"/>
					<ImageButton
					    android:id="@+id/setting_btn_myexpense"
					    android:src="@drawable/detail_icon"
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="40"
					    android:scaleType="fitEnd"
					    android:background="@color/trans"/>
		        </LinearLayout>
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:background="@drawable/setting_item_bg">
					<TextView
					    android:layout_width="0dp"
					    android:layout_height="wrap_content"
					    android:layout_weight="20"
					    android:gravity="center"
					    android:padding="@dimen/setting_text_padding"
					    android:text="@string/setting_myrepair"
					    android:textColor="@color/black"
					    android:textSize="@dimen/setting_text_size"/>
					<ImageButton
					    android:id="@+id/setting_btn_myrepair"
					    android:src="@drawable/detail_icon"
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="40"
					    android:scaleType="fitEnd"
					    android:background="@color/trans"/>
		        </LinearLayout>
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:background="@drawable/setting_item_bg">
					<TextView
					    android:layout_width="0dp"
					    android:layout_height="wrap_content"
					    android:layout_weight="20"
					    android:gravity="center"
					    android:padding="@dimen/setting_text_padding"
					    android:text="@string/setting_myadvice"
					    android:textColor="@color/black"
					    android:textSize="@dimen/setting_text_size"/>
					<ImageButton
					    android:id="@+id/setting_btn_myadvice"
					    android:src="@drawable/detail_icon"
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="40"
					    android:scaleType="fitEnd"
					    android:background="@color/trans"/>
		        </LinearLayout>
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:background="@drawable/setting_item_bg">
					<TextView
					    android:layout_width="0dp"
					    android:layout_height="wrap_content"
					    android:layout_weight="20"
					    android:gravity="center"
					    android:padding="@dimen/setting_text_padding"
					    android:text="@string/setting_myshoprecord"
					    android:textColor="@color/black"
					    android:textSize="@dimen/setting_text_size"/>
					<ImageButton
					    android:id="@+id/setting_btn_myshoprecord"
					    android:src="@drawable/detail_icon"
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="40"
					    android:scaleType="fitEnd"
					    android:background="@color/trans"/>
		        </LinearLayout>	        
		    </LinearLayout>
		    <!-- Update -->
	        <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/trans"
		        android:layout_marginTop="@dimen/setting_margin_top"
		        android:orientation="vertical">
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:background="@drawable/setting_item_bg">
					<TextView
					    android:layout_width="0dp"
					    android:layout_height="wrap_content"
					    android:layout_weight="20"
					    android:gravity="center"
					    android:padding="@dimen/setting_text_padding"
					    android:text="@string/setting_help"
					    android:textColor="@color/black"
					    android:textSize="@dimen/setting_text_size"/>
					<ImageButton
					    android:id="@+id/setting_btn_help"
					    android:src="@drawable/detail_icon"
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="40"
					    android:scaleType="fitEnd"
					    android:background="@color/trans"/>
		        </LinearLayout>
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:background="@drawable/setting_item_bg">
					<TextView
					    android:layout_width="0dp"
					    android:layout_height="wrap_content"
					    android:layout_weight="20"
					    android:gravity="center"
					    android:padding="@dimen/setting_text_padding"
					    android:text="@string/setting_update"
					    android:textColor="@color/black"
					    android:textSize="@dimen/setting_text_size"/>
					<ImageButton
					    android:id="@+id/setting_btn_update"
					    android:src="@drawable/detail_icon"
					    android:layout_width="0dp"
					    android:layout_height="match_parent"
					    android:layout_weight="40"
					    android:scaleType="fitEnd"
					    android:background="@color/trans"/>
		        </LinearLayout>
		    </LinearLayout>
		    <!-- Log Off -->
	       <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/trans"
		        android:layout_marginTop="@dimen/setting_margin_top"
		        android:orientation="vertical">
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:background="@drawable/setting_item_bg">
					<Button
					    android:id="@+id/setting_btn_logoff"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
					    android:text="@string/setting_logoff"
					    android:textColor="@color/white"
					    android:textSize="@dimen/setting_text_size"
					    android:background="@color/red"
					    android:padding="@dimen/setting_text_padding"/>
		        </LinearLayout>
		    </LinearLayout>	    
	    </LinearLayout>
	</ScrollView>
</LinearLayout>