<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@color/blue"
        android:orientation="horizontal">
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1">
			<ImageButton
			    android:id="@+id/activity_post_btn_back"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:src="@drawable/back_icon"
			    android:scaleType="fitCenter"
			    android:background="@color/trans"/>	        
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="4"
	        android:gravity="center">
			<TextView
			    android:id="@+id/main_text_title"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/activity_post"
			    android:textSize="@dimen/bar_title_text"
			    android:textColor="@color/white"/>	        
	    </LinearLayout>
		<LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center">
	    </LinearLayout>      
    </LinearLayout>
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="15.5"
	    android:background="@color/grey">
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginTop="@dimen/property_repair_margin_top">
			<LinearLayout 
			    android:focusable="true"
			    android:focusableInTouchMode="true"
			    android:layout_width="0dp"
			    android:layout_height="0dp"/>
			<EditText 
			    android:id="@+id/activity_post_txt_title"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:gravity="center"
			    android:background="@color/white"
			    android:textColor="@color/black"
			    android:textSize="@dimen/activity_post_textsize_title"
			    android:hint="@string/activity_post_title"
			    android:textColorHint="@color/dark_grey"
			    android:padding="@dimen/activity_padding"/>
			<EditText
			    android:id="@+id/activity_post_txt_description"
			    android:layout_width="match_parent"
			    android:layout_height="@dimen/activity_post_height_content"
			    android:gravity="top"
			    android:background="@color/white"
			    android:textColor="@color/black"
			    android:textSize="@dimen/activity_post_textsize_content"
			    android:hint="@string/activity_post_content"
			    android:textColorHint="@color/dark_grey"
			    android:padding="@dimen/activity_padding"/>
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="@dimen/activity_post_height_image"
			    android:background="@color/white"
			    android:orientation="horizontal">
				<ImageButton
				    android:id="@+id/activity_post_addimage"
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:src="@drawable/add_image_icon"
				    android:scaleType="fitStart"
				    android:background="@color/trans"/>
			</LinearLayout>
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="@dimen/activity_post_height_button"
			    android:orientation="horizontal"
			    android:background="@color/white"
			    android:gravity="center_vertical"
			    android:layout_marginTop="@dimen/property_repair_margin_top">
			    <LinearLayout 
			        android:layout_width="0dp"
			        android:layout_height="match_parent"
			        android:layout_weight="1"/>
			    <Button 
			        android:id="@+id/activity_post_btn_cancel"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="4"
			        android:padding="@dimen/activity_padding"
			        android:background="@drawable/btn_cancel"
			        android:text="@string/activity_post_cancel"
			        android:textSize="@dimen/activity_post_textsize_content"
			        android:textColor="@color/white"/>
			    <LinearLayout 
			        android:layout_width="0dp"
			        android:layout_height="match_parent"
			        android:layout_weight="1"/>
				<Button
				    android:id="@+id/activity_post_btn_submit"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="4"
			        android:padding="@dimen/activity_padding"
			        android:background="@drawable/btn_submit"
			        android:text="@string/activity_post_submit"
			        android:textSize="@dimen/activity_post_textsize_content"
			        android:textColor="@color/white"/>			    
			    <LinearLayout 
			        android:layout_width="0dp"
			        android:layout_height="match_parent"
			        android:layout_weight="1"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>