<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@color/blue_500"
        android:orientation="horizontal">
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1">
			<ImageButton
			    android:id="@+id/property_advice_btn_back"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:src="@drawable/back_icon"
			    android:scaleType="fitCenter"
			    android:background="@color/transparent"/>	        
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="4"
	        android:gravity="center">
			<TextView
			    android:id="@+id/main_text_title"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/property_title_advice"
			    android:textSize="@dimen/bar_title_text"
			    android:textColor="@color/white"/>	        
	    </LinearLayout>
		<LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center">
	    </LinearLayout>      
    </LinearLayout>
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="15.5"
	    android:background="@color/grey_500">
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginTop="@dimen/property_repair_margin_top">
			<LinearLayout 
			    android:focusable="true"
			    android:focusableInTouchMode="true"
			    android:layout_width="0dp"
			    android:layout_height="0dp"/>			
			<EditText
			    android:id="@+id/property_advice_txt_description"
			    android:layout_width="match_parent"
			    android:layout_height="@dimen/property_repair_textheight"
			    android:gravity="top"
			    android:background="@color/white"
			    android:textColor="@color/black"
			    android:textSize="@dimen/property_repair_text_size"
			    android:hint="@string/property_advice_hint"
			    android:textColorHint="@color/grey_500"
			    android:padding="@dimen/property_repair_padding"/>
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="@dimen/property_repair_btnheight"
			    android:orientation="horizontal"
			    android:background="@color/white"
			    android:gravity="center_vertical"
			    android:layout_marginTop="@dimen/property_repair_margin_top">
			    <LinearLayout 
			        android:layout_width="0dp"
			        android:layout_height="match_parent"
			        android:layout_weight="1"/>
			    <Button 
			        android:id="@+id/property_advice_btn_cancel"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="4"
			        android:padding="@dimen/property_repair_padding"
			        android:background="@drawable/btn_cancel"
			        android:text="@string/property_repair_cancel"
			        android:textSize="@dimen/property_repair_text_size"
			        android:textColor="@color/white"/>
			    <LinearLayout 
			        android:layout_width="0dp"
			        android:layout_height="match_parent"
			        android:layout_weight="1"/>
				<Button
				    android:id="@+id/property_advice_btn_submit"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="4"
			        android:padding="@dimen/property_repair_padding"
			        android:background="@drawable/btn_submit"
			        android:text="@string/property_repair_submit"
			        android:textSize="@dimen/property_repair_text_size"
			        android:textColor="@color/white"/>			    
			    <LinearLayout 
			        android:layout_width="0dp"
			        android:layout_height="match_parent"
			        android:layout_weight="1"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>