<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical">
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1.5"/>
	    <com.handmark.pulltorefresh.library.PullToRefreshListView 
	        android:id="@+id/shop_listview"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="15.5"/>
	</LinearLayout>
	<LinearLayout
	    android:visibility="gone"
	    android:id="@+id/shop_layout_menu"
	    android:layout_width="match_parent"
	    android:layout_height="100dp"
	    android:background="@color/dark_blue"
	    android:orientation="horizontal" >
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:orientation="vertical" >
	        <ImageButton
	            android:id="@+id/shop_btn_record"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="2"
	            android:background="@color/trans"
	            android:scaleType="fitCenter"
	            android:src="@drawable/shop_record_icon" />
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/shop_record"
	            android:textColor="@color/white"
	            android:textSize="@dimen/shop_menu_size" />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:orientation="vertical" >
	        <ImageButton
	            android:id="@+id/shop_btn_myshop"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="2"
	            android:background="@color/trans"
	            android:scaleType="fitCenter"
	            android:src="@drawable/shop_myshop_icon" />
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/shop_myshop"
	            android:textColor="@color/white"
	            android:textSize="@dimen/shop_menu_size" />
	    </LinearLayout>
	</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1.5"
		    android:background="@color/blue"
		    android:orientation="horizontal">
			<LinearLayout 
			    android:layout_width="0dp"
			    android:layout_height="match_parent"
			    android:layout_weight="1"/>
			<LinearLayout 
			    android:layout_width="0dp"
			    android:layout_height="match_parent"
			    android:layout_weight="4">
				<TextView
				    android:layout_width="0dp"
				    android:layout_height="match_parent"
				    android:layout_weight="4"
				    android:text="@string/main_shop_title"
				    android:textColor="@color/white"
				    android:textSize="@dimen/bar_title_text"
				    android:gravity="center"/>
			</LinearLayout>
			<LinearLayout 
			    android:layout_width="0dp"
			    android:layout_height="match_parent"
			    android:layout_weight="1">
				<ImageButton
				    android:id="@+id/shop_btn_menu"
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:src="@drawable/menu_out_icon"
				    android:scaleType="fitCenter"
				    android:background="@color/trans"/>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
		    android:layout_weight="15.5">
		</LinearLayout>
    </LinearLayout>
</FrameLayout>